@@ -4104,6 +4104,11 @@ name|DFS_DATANODE_DATA_DIR_KEY
 argument_list|)
 condition|)
 block|{
+name|IOException
+name|rootException
+init|=
+literal|null
+decl_stmt|;
 try|try
 block|{
 name|LOG
@@ -4133,6 +4138,79 @@ name|IOException
 name|e
 parameter_list|)
 block|{
+name|rootException
+operator|=
+name|e
+expr_stmt|;
+block|}
+finally|finally
+block|{
+comment|// Send a full block report to let NN acknowledge the volume changes.
+try|try
+block|{
+name|triggerBlockReport
+argument_list|(
+operator|new
+name|BlockReportOptions
+operator|.
+name|Factory
+argument_list|()
+operator|.
+name|setIncremental
+argument_list|(
+literal|false
+argument_list|)
+operator|.
+name|build
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Exception while sending the block report after refreshing"
+operator|+
+literal|" volumes "
+operator|+
+name|property
+operator|+
+literal|" to "
+operator|+
+name|newVal
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|rootException
+operator|==
+literal|null
+condition|)
+block|{
+name|rootException
+operator|=
+name|e
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|rootException
+operator|!=
+literal|null
+condition|)
+block|{
 throw|throw
 operator|new
 name|ReconfigurationException
@@ -4149,9 +4227,11 @@ argument_list|(
 name|property
 argument_list|)
 argument_list|,
-name|e
+name|rootException
 argument_list|)
 throw|;
+block|}
+block|}
 block|}
 block|}
 else|else
@@ -5043,24 +5123,6 @@ operator|=
 name|getStorageLocations
 argument_list|(
 name|conf
-argument_list|)
-expr_stmt|;
-comment|// Send a full block report to let NN acknowledge the volume changes.
-name|triggerBlockReport
-argument_list|(
-operator|new
-name|BlockReportOptions
-operator|.
-name|Factory
-argument_list|()
-operator|.
-name|setIncremental
-argument_list|(
-literal|false
-argument_list|)
-operator|.
-name|build
-argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
